<resources>
    <string name="app_name">TestSmartLink</string>
    <string name="hiflying_smartlinker_mix">Mixed:</string>
    <string name="hiflying_smartlinker_ssid">SSID:</string>
    <string name="hiflying_smartlinker_password">密码:</string>
    <string name="hiflying_smartlinker_others">其他:</string>
    <string name="hiflying_smartlinker_start">开始</string>
    <string name="hiflying_smartlinker_waiting">请稍后&#8230;</string>
    <string name="hiflying_smartlinker_timeout">配置超时!</string>
    <string name="hiflying_smartlinker_completed">SmartLink 完成</string>
    <string name="hiflying_smartlinker_new_module_found" formatted="false">发现新模块: Id-%s Mac-%s Ip-%s</string>
    <string name="hiflying_smartlinker_no_wifi_connectivity">没有Wifi连接</string>
</resources>