<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Customized Text" 
	    android:gravity="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiflying_smartlinker_ssid" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText_hiflying_smartlinker_ssid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:editable="false"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiflying_smartlinker_password" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText_hiflying_smartlinker_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiflying_smartlinker_others" 
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText_hiflying_smartlinker_others"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:id="@+id/tableRow_hiflying_smartlinker_mixed"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiflying_smartlinker_mix" 
                android:gravity="center"/>

            <Spinner 
                android:id="@+id/spinner_hiflying_smartlinker_mixed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:entries="@array/smartlinkv7_mix_types"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_hiflying_smartlinker_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/hiflying_smartlinker_start" />

</LinearLayout>